more visual fixes

--- a/app/views/posts/blog.html.erb
+++ b/app/views/posts/blog.html.erb
@@ -8,8 +8,10 @@
             <h3><%= link_to post.title, post_path(post) %></h3>
             <p><%= post.content.body.to_plain_text.truncate(250) if post.content.body.present? %></p>
             <div class="post-data">
-              <i class="fa-solid fa-calendar"></i> • <%= post.created_at.strftime("%b %Y") %>
-              <i class="fa-solid fa-stopwatch"></i> • <%= post.content.body.to_plain_text.reading_time :format => :approx if post.content.body.present? %>
+              <div class="post-created-at">
+                <i class="fa-solid fa-calendar"></i> • <%= post.created_at.strftime("%b %Y") %>
+                <i class="fa-solid fa-stopwatch"></i> • <%= post.content.body.to_plain_text.reading_time :format => :approx if post.content.body.present? %>
+              </div>
 
               <% post.tags.each do |tag| %>
                 <%= link_to tag.name, tag_path(tag.name), class:"btn btn-info tag-button" %>
