--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -19,17 +19,13 @@
             <%= f.input :subject %>
             <%= f.input :message %>
             <%= f.button :submit, class:"btn btn-info"%>
+            <%= recaptcha_tags %>
           <% end %>
         </div>
       </div>
   </div>
 </div>
 
-<%#
-<!-- Widget em linha do Calendly - início -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/victor_barbosa/30min?primary_color=1a7f5f" style="min-width:320px;height:700px;"></div>
-<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-<!-- Widget em linha do Calendly - fim --> %>
 
 <style>
 .form-container {
